--- a/pages/sponsor/sponsor.wxss
+++ b/pages/sponsor/sponsor.wxss
@@ -1,7 +1,59 @@
 /* pages/sponsor/sponsor.wxss */
 page, .sponsor {
     height: 100%;
+    background: #f5f8fa;
 }
 .head {
+    margin-bottom: 60rpx;
     background: #f08200;
+}
+.info {
+    position: relative;
+    bottom: -60rpx;
+    margin: 60rpx 30rpx 0;
+    text-align: center;
+    border-radius: 20rpx;
+    font-size: 0;
+    background: #fff;
+    box-shadow:0px 4rpx 20rpx -2rpx rgba(211,218,230,1);
+}
+.avatar {
+    width: 160rpx;
+    height: 160rpx;
+    border: 6rpx solid #fff;
+    margin-top: -80rpx;
+    border-radius: 100%;
+}
+.info-name {
+    margin: 40rpx auto 30rpx;
+    line-height: 48rpx;
+    font-size: 48rpx;
+}
+.info-desc {
+    padding-bottom: 50rpx;
+    font-size: 30rpx;
+    color: #879193;
+}
+
+.list {
+    margin: 0 30rpx 0 0 ;
+    padding: 50rpx 0;
+    font-size: 0; 
+}
+.item {
+    display: inline-block;
+    width: calc( 50% - 30rpx);
+    padding: 50rpx 0;
+    margin: 0 0 30rpx 30rpx;
+    text-align: center;
+    border-radius: 20rpx;
+    background: #fff;
+}
+.item image {
+    width: 120rpx;
+    height: 120rpx;
+}
+.item-name {
+    padding: 20rpx 0;
+    font-size: 36rpx;
 }
