--- a/pages/mall/mall.wxss
+++ b/pages/mall/mall.wxss
@@ -11,6 +11,7 @@
     z-index: 999;
     font-size: 40rpx;
     text-align: center;
+    background: #fff;
 }
 .top .avatar {
     position: absolute;
@@ -30,24 +31,36 @@
    font-size: 34rpx;
 }
 
+.list-main {
+    padding-top: 20rpx;
+}
 .item {
     display: flex;
-    padding: 20rpx 0 10rpx;
-    margin: 0 15rpx 15rpx;
-    border-bottom: 2rpx solid #fafbfc;
-}
-.item .item-l {
-    width: 160rpx;
-    font-size: 0;
+    padding: 20rpx;
+    margin: 0 0 20rpx 0;
+    background: #fff;
 }
 .item .pic {
     width: 160rpx;
     height: 160rpx;
-    border-radius: 10rpx;
+}
+.item .item-info {
+    flex: 1;
+    padding: 0 15rpx;
 }
 .item .item-title {
-    font-size: 30rpx;
-    line-height: 60rpx;
+    display: -webkit-box;
+    width: 100%;
+    height: 32rpx;
+    font-size: 28rpx;
+    line-height: 32rpx;
+    margin: 10rpx 0 18rpx;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+.item-main {
+    display: flex;
 }
 .item .item-supply {
     flex: 1;
@@ -55,7 +68,11 @@
     text-align: center;
 }
 .item .price-name {
-    line-height: 120rpx;
+    font-size: 24rpx;
+    line-height: 30rpx;
+}
+.item .price-num {
+    line-height: 70rpx;
 }
 .item .item-sale {
     flex: 1;
@@ -65,11 +82,14 @@
 .less, .add {
     display: inline-block;
     width: 25%;
+    height: 70rpx;
     vertical-align: top;
 }
 .price-inp {
     display: inline-block;
     width: 30%;
+    height: 70rpx;
+    vertical-align: top;
 }
 
 .no-content {
