--- a/pages/product/product.wxml
+++ b/pages/product/product.wxml
@@ -1,80 +1,47 @@
 <view class="container">
     <view class="product">
         <view class="top" style="padding-top:{{calcData.pt}}px; height:{{calcData.h}}px; line-height:{{calcData.h}}px; ">
-            <view class="avatar" style="padding-top:{{calcData.pt}}px; height:{{calcData.h}}px; line-height:{{calcData.h}}px; "><image src="avatar.jpg" mode="aspectFit"></image></view>
+            <view class="avatar" style="padding-top:{{calcData.pt}}px; height:{{calcData.h}}px; line-height:{{calcData.h}}px; "><image src="/assets/img/avatar.jpg" mode="aspectFit"></image></view>
             <view class="title">产品库</view>
         </view>
         <scroll-view class="list" scroll-y style="height:{{calcData.mainH}}px">
             <view class="list-main">
                 <view class="item">
-                    <view class="item-l">
-                        <image class="pic" src="avatar.jpg"></image>
-                        <view class="item-title">花园牛奶</view>
-                    </view>
+                    <image class="pic" src="/assets/img/avatar.jpg"></image>
                     <view class="item-info">
-                        <view class="price-name">供货价/建议价</view>
-                        <view class="price-num">35/45</view>
+                        <view class="item-title">泰国进口红毛丹</view>
+                        <view class="item-price">
+                            <view class="price-supply"><view class="price">￥35</view>供货价</view>
+                            <view class="price-sale"><view class="price">￥45</view>建议价</view>
+                        </view>
                     </view>
                     <view class="item-btn">加入</view>
                 </view>
                 <view class="item">
-                    <view class="item-l">
-                        <image class="pic" src="avatar.jpg"></image>
-                        <view class="item-title">花园牛奶</view>
-                    </view>
+                    <image class="pic" src="/assets/img/avatar.jpg"></image>
                     <view class="item-info">
-                        <view class="price-name">供货价/建议价</view>
-                        <view class="price-num">35/45</view>
+                        <view class="item-title">墨西哥巨无霸牛油果</view>
+                        <view class="item-price">
+                            <view class="price-supply"><view class="price">￥35</view>供货价</view>
+                            <view class="price-sale"><view class="price">￥45</view>建议价</view>
+                        </view>
                     </view>
                     <view class="item-btn">加入</view>
                 </view>
                 <view class="item">
-                    <view class="item-l">
-                        <image class="pic" src="avatar.jpg"></image>
-                        <view class="item-title">花园牛奶</view>
-                    </view>
+                    <image class="pic" src="/assets/img/avatar.jpg"></image>
                     <view class="item-info">
-                        <view class="price-name">供货价/建议价</view>
-                        <view class="price-num">35/45</view>
-                    </view>
-                    <view class="item-btn">加入</view>
-                </view>
-                <view class="item">
-                    <view class="item-l">
-                        <image class="pic" src="avatar.jpg"></image>
-                        <view class="item-title">花园牛奶</view>
-                    </view>
-                    <view class="item-info">
-                        <view class="price-name">供货价/建议价</view>
-                        <view class="price-num">35/45</view>
-                    </view>
-                    <view class="item-btn">加入</view>
-                </view>
-                <view class="item">
-                    <view class="item-l">
-                        <image class="pic" src="avatar.jpg"></image>
-                        <view class="item-title">花园牛奶</view>
-                    </view>
-                    <view class="item-info">
-                        <view class="price-name">供货价/建议价</view>
-                        <view class="price-num">35/45</view>
-                    </view>
-                    <view class="item-btn">加入</view>
-                </view>
-                <view class="item">
-                    <view class="item-l">
-                        <image class="pic" src="avatar.jpg"></image>
-                        <view class="item-title">花园牛奶</view>
-                    </view>
-                    <view class="item-info">
-                        <view class="price-name">供货价/建议价</view>
-                        <view class="price-num">35/45</view>
+                        <view class="item-title">南非红心果肉葡萄柚</view>
+                        <view class="item-price">
+                            <view class="price-supply"><view class="price">￥35</view>供货价</view>
+                            <view class="price-sale"><view class="price">￥45</view>建议价</view>
+                        </view>
                     </view>
                     <view class="item-btn">加入</view>
                 </view>
             </view>
            <view class="no-content">
-                <image src="/assets/img/no-content.png" class="no-content-bg" mode="aspectFit"></image>
+                <image src="/assets/img/empty.png" class="no-content-bg" mode="aspectFit"></image>
                 <text class="no-content-title">暂无产品</text>
             </view>
         </scroll-view>
