--- a/pages/product/product.wxss
+++ b/pages/product/product.wxss
@@ -11,10 +11,11 @@
     z-index: 999;
     font-size: 40rpx;
     text-align: center;
+    background: #fff;
 }
 .top .avatar {
     position: absolute;
-    left: 15rpx;
+    left: 20rpx;
     top: 0;
     width: 60rpx;
     display: flex;
@@ -32,41 +33,57 @@
 
 .item {
     display: flex;
-    padding: 20rpx 0 10rpx;
-    margin: 0 15rpx 15rpx;
-    border-bottom: 2rpx solid #fafbfc;
-}
-.item .item-l {
-    width: 160rpx;
-    font-size: 0;
+    padding: 20rpx;
+    margin: 20rpx 0;
+    background: #fff;
 }
 .item .pic {
     width: 160rpx;
     height: 160rpx;
-    border-radius: 10rpx;
-}
-.item .item-title {
-    font-size: 30rpx;
-    line-height: 60rpx;
 }
 .item .item-info {
     flex: 1;
     padding: 0 15rpx;
     text-align: center;
 }
-.item .price-name {
-    line-height: 120rpx;
+.item .item-title {
+    display: -webkit-box;
+    width: 100%;
+    height: 32rpx;
+    font-size: 28rpx;
+    line-height: 32rpx;
+    margin: 10rpx 0 18rpx;
+    text-align: left;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
 }
+.item .item-price {
+    display: flex;
+    height: 100rpx;
+}
+.item .price-supply, .item .price-sale {
+    flex: 1;
+    font-size: 24rpx;
+    line-height: 40rpx;
+    text-align: center;
+}
+.item .price {
+    line-height: 60rpx;
+    font-size: 36rpx;
+    color: #A65F1C;
+}
+
 .item .item-btn {
     width: 140rpx;
-    height: 60rpx;
-    line-height: 60rpx;
+    height: 50rpx;
+    line-height: 50rpx;
     text-align: center;
     margin-top: 60rpx;
-    font-size: 32rpx;
-    border-radius: 30rpx;
+    font-size: 28rpx;
+    border-radius: 25rpx;
     color: #fff;
-    background: #f08200;
+    background: #FFA957;
 }
 
 .no-content {
