--- a/pages/order/order.wxss
+++ b/pages/order/order.wxss
@@ -1,5 +1,5 @@
 /* pages/mall/mall.wxss */
-.order {
+.product {
     height: 100%;
 }
 .top {
@@ -11,6 +11,7 @@
     z-index: 999;
     font-size: 40rpx;
     text-align: center;
+    background: #fff;
 }
 .top .avatar {
     position: absolute;
@@ -30,43 +31,87 @@
    font-size: 34rpx;
 }
 
+.list-main {
+    padding-top: 20rpx;
+}
 .item {
+    padding: 20rpx 0;
+    margin: 0 0 20rpx 0;
+    background: #fff;
+}
+.item-header {
     display: flex;
-    padding: 20rpx 0 10rpx;
-    margin: 0 15rpx 15rpx;
-    border-bottom: 2rpx solid #fafbfc;
-}
-.item .item-l {
-    width: 160rpx;
+    padding: 0 20rpx 20rpx;
     font-size: 0;
+    border-bottom: 2rpx solid #F2F2F2;
 }
-.item .pic {
-    width: 160rpx;
-    height: 160rpx;
-    border-radius: 10rpx;
-}
-.item .item-title {
-    font-size: 30rpx;
-    line-height: 60rpx;
-}
-.item .item-info {
+.item-user, .item-date {
     flex: 1;
-    padding: 0 15rpx;
-    text-align: center;
 }
-.item .price-name {
-    line-height: 120rpx;
+.item-header .item-name {
+    display: inline-block;
+    line-height: 50rpx;
+    font-size: 28rpx;
 }
-.item .item-btn {
+.item-header .author {
+    width: 50rpx;
+    height: 50rpx;
+    margin-right: 10rpx;
+    border-radius: 100%;
+    vertical-align: top;
+}
+.item-header .item-date {
+    font-size: 24rpx;
+    line-height: 50rpx;
+    text-align: right;
+    color: #C8C8C8;
+}
+
+.item-main {
+    display: flex;
+    padding: 20rpx;
+}
+.item-main .img {
     width: 140rpx;
-    height: 60rpx;
-    line-height: 60rpx;
-    text-align: center;
-    margin-top: 60rpx;
-    font-size: 32rpx;
-    border-radius: 30rpx;
-    color: #fff;
-    background: #f08200;
+    height: 140rpx;
+}
+.item-main .item-info {
+    flex: 1;
+    margin-left: 20rpx;
+}
+.item-main .item-title {
+    display: -webkit-box;
+    width: 100%;
+    height: 32rpx;
+    font-size: 28rpx;
+    line-height: 32rpx;
+    margin: 10rpx 0 18rpx;
+    text-align: left;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+}
+.item-main .item-desc {
+    font-size: 24rpx;
+    color: #C8C8C8;
+}
+
+.item-footer {
+    display: flex;
+    padding: 0 20rpx;
+    border-top: 2rpx solid #F2F2F2;
+}
+.item-amount, .item-status {
+    flex: 1;
+    padding-top: 20rpx;
+    font-size: 28rpx;
+}
+.item-footer .item-status {
+    text-align: right;
+}
+.item-footer .red {
+    font-weight: bold;
+    color: #FF6757;
 }
 
 .no-content {
