--- a/pages/product/product.wxml
+++ b/pages/product/product.wxml
@@ -31,6 +31,17 @@
                 <view class="item">
                     <image class="pic" src="/assets/img/avatar.jpg"></image>
                     <view class="item-info">
+                        <view class="item-title">墨西哥巨无霸牛油果</view>
+                        <view class="item-price">
+                            <view class="price-supply"><view class="price">￥35</view>供货价</view>
+                            <view class="price-sale"><view class="price">￥45</view>建议价</view>
+                        </view>
+                    </view>
+                    <view class="item-btn">加入</view>
+                </view>
+                <view class="item">
+                    <image class="pic" src="/assets/img/avatar.jpg"></image>
+                    <view class="item-info">
                         <view class="item-title">南非红心果肉葡萄柚</view>
                         <view class="item-price">
                             <view class="price-supply"><view class="price">￥35</view>供货价</view>
