--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -4,12 +4,49 @@
             <view class="avatar" style="padding-top:{{calcData.pt}}px; height:{{calcData.h}}px; line-height:{{calcData.h}}px; "><image src="/assets/img/avatar.jpg" mode="aspectFit"></image></view>
             <view class="title">中关村西屋国际</view>
         </view>
-        <view class="carousel">
-            <view class="">
-            </view>
-        </view>
+        <swiper autoplay circular="true" vertical="true" class="carousel">
+            <swiper-item>
+                <view> 23秒前 怀旧的文学小青年购买了 顺义有机草莓</view>
+            </swiper-item>
+            <swiper-item>
+                <view> 25秒前 怀旧的文学小青年购买了 顺义有机草莓</view>
+            </swiper-item>
+            <swiper-item>
+                <view> 203秒前 怀旧的文学小青年购买了 顺义有机草莓</view>
+            </swiper-item>
+        </swiper>
         <scroll-view class="list" scroll-y style="height:{{maxH}}px">
             <view class="list-main">
+                <view class="item">
+                    <image class="pic" src="/assets/img/avatar.jpg"></image>
+                    <view class="item-info">
+                        <view class="item-title">泰国进口红毛丹</view>
+                        <view class="item-desc">这是一段介绍</view>
+                        <view class="item-format">500g/盒</view>
+                        <view class="item-main">
+                            <view class="item-price">￥<text>123</text></view>
+                            <view class="price-num">
+                                <image src="/assets/img/less.png" mode="aspectFit" class="less"></image>
+                                <text class="amount">1</text>
+                                <image src="/assets/img/add.png" mode="aspectFit" class="add"></image>
+                            </view>
+                        </view>
+                    </view>
+                </view>
+                <view class="item">
+                    <image class="pic" src="/assets/img/avatar.jpg"></image>
+                    <view class="item-info">
+                        <view class="item-title">泰国进口红毛丹</view>
+                        <view class="item-main">
+                            <view class="item-price">￥<text>123</text></view>
+                            <view class="price-num">
+                                <image src="/assets/img/less.png" mode="aspectFit" class="less"></image>
+                                <text class="amount">1</text>
+                                <image src="/assets/img/add.png" mode="aspectFit" class="add"></image>
+                            </view>
+                        </view>
+                    </view>
+                </view>
                 <view class="item">
                     <image class="pic" src="/assets/img/avatar.jpg"></image>
                     <view class="item-info">
